# yral-ai-chat

./: .dockerignore  .env.example  .gitignore  .trivyignore  API_CONTRACT.md  CODE_QUALITY_IMPROVEMENTS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  LITESTREAM_PROD_DEPLOY.md  LITESTREAM_SETUP.md  MESSAGE_TYPES.md  Makefile  OPENROUTER_INTEGRATION_CHECKLIST.md  OPENROUTER_INTEGRATION_COMPLETE.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PYTEST_SUMMARY.md  README.md  RECOMMENDED_RUFF_RULES.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.example  fly.toml  full_test.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  yral-ai-chat.service
.github/: CODEOWNERS
.github/workflows/: build-check.yml  deploy-baremetal.yml  deploy-k8s.yml  deploy-preview.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  postgres-db-backup.yml  rotate-ssh.yml  upload-secrets.yml
adhoc/: check_auth_service.py  decode_jwt.py  test_conversation_greeting.py  test_jwt_auth.py  test_sentry.py
config/: litestream.service  litestream.yml  litestream.yml.example
deploy-baremetal/: Caddyfile  Dockerfile  docker-compose.yml  entrypoint.sh  litestream.yml
docs/: README.md
docs/api/: README.md  openapi.json  openapi.yaml
docs/architecture/: database.md  system-design.md
docs/development/: development-guide.md  testing-guide.md
docs/operations/: emergency-restore.md
gradio-demo/: gradio_demo.py  gradio_demo2.py
k8s/: deployment.yml  ingress.yml  namespace.yml  service.yml
kt/: api.md  core_logic.md  database.md  overview.md  setup.md  testing.md
migrations/: 001_init_schema.sql  002_add_first_message.sql  002_seed_influencers.sql
migrations/docs/: MIGRATION_QUICK_REFERENCE.md  POSTGRESQL_MIGRATION_GUIDE.md  POSTGRESQL_OPTIMIZATION_PLAN.md  REFACTORING_SUMMARY.md  SCHEMA_DIFFERENCES.md
migrations/postgres/: 001_init_schema.sql
migrations/postgresql/: 004_dashboard_views.sql  011_optimize_indices.sql  SCHEMA_FROM_SQLITE.sql
migrations/scripts/: dump_sqlite_schema_to_pg.py  migrate_sqlite_to_postgres.py  reset_and_apply_schema.py  verify_migration.py
migrations/sqlite/: 001_init_schema.sql  001_initial_schema.sql  002_initial_data.sql  002_seed_influencers.sql  003_add_ananya_harsh.sql  003_sync_savita_prompts.sql  003_updates.sql  004_add_savita_bhabhi.sql  004_dashboard_views.sql  004_sync_savita_prompts_v2.sql  004_update_ahaan_id.sql  005_add_is_nsfw_column.sql  005_add_nsfw_flag.sql  005_convert_all_to_ic_principals.sql  005_sync_savita_prompts_v3.sql  006_create_tara_bot.sql  006_force_update_all_ic_principals.sql  006_sync_savita_prompts_v4.sql  006_update_savita_prompts.sql  007_add_initial_suggested_messages.sql  007_force_update_savita.sql  007_performance_indexes.sql  007_sync_savita_prompts_v5.sql  008_activate_savita.sql  008_add_client_message_id.sql  008_add_principal_ids.sql  008_schema_cleanup.sql  008_seed_initial_suggested_messages.sql  008_sync_savita_prompts_v6.sql  009_add_new_influencers.sql  009_add_principal_ids.sql  009_backfill_source.sql  009_sync_savita_prompts_v7.sql  010_add_inbox_columns_to_messages.sql  010_backfill_source.sql  010_ensure_ahaan_initial_greeting.sql  011_add_inbox_columns.sql  011_add_principal_ids.sql  011_create_tara_bot.sql  011_update_ahaan_avatar.sql  (+10 more)
nginx/: README.md  VALIDATION_FIX.md  nginx.conf  nginx.conf.wrapper  rate-limit-zones.conf  yral-ai-chat.conf
scripts/: README.md  check_apis.py  deploy.sh  docker-entrypoint.sh  emergency_restore.sh  export_openapi_spec.py  fuzz_test.py  install_litestream_prod.sh  migrate_pg_to_sqlite.py  migrate_sqlite_to_postgres.py  replicate_db.sh  run_migrations.py  setup_db.sh  setup_nginx.sh  setup_sqlite_litestream.sh  setup_systemd.sh  start_litestream_local.sh  verify_backup.py  verify_database.py
server-rs/: Cargo.toml
server-rs/src/: config.rs  main.rs
server-rs/src/db/: migrations.rs  mod.rs
server-rs/src/db/repositories/: conversation_repository.rs  influencer_repository.rs  message_repository.rs
server-rs/src/error/: mod.rs
server-rs/src/models/: entities.rs  requests.rs  responses.rs
server-rs/src/routes/: health.rs
src/: __init__.py  config.py  config.rs  main.py  main.rs
src/auth/: __init__.py  jwt_auth.py  mod.rs
src/core/: __init__.py  background_tasks.py  cache.py  circuit_breaker.py  dependencies.py  exceptions.py  logging.py  metrics.py  moderation.py  websocket.py
src/db/: __init__.py  base.py  mod.rs  pg_write.rs
src/error/: mod.rs
src/middleware/: auth.rs  logging.py  mod.rs  rate_limit.rs  rate_limiter.py  sentry.rs  timing.py  versioning.py
src/models/: __init__.py  common.py  entities.py  entities.rs  internal.py  requests.py  requests.rs  responses.py  responses.rs  websocket_events.py
src/routes/: chat.rs  chat_v2.rs  health.rs  influencers.rs  media.rs  mod.rs  openapi.rs  sentry.rs  websocket.rs
src/services/: ai.rs  ai_provider_health.py  ai_provider_metrics.py  base_ai_client.py  character_generator.py  character_generator.rs  chat_service.py  gemini_client.py  google_chat.rs  influencer_service.py  mod.rs  moderation.rs  monitoring_service.py  notification.rs  notification_service.py  nsfw_detection_service.py  openrouter_client.py  replicate.rs  replicate_client.py  storage.rs  storage_service.py  websocket.rs
tests/: README.md  __init__.py  auth.rs  chat.rs  chat_v2.rs  conftest.py  health.rs  influencers.rs  media.rs  mock_providers.py  rate_limit.rs  test_chat_endpoints.py  test_health_endpoints.py  test_influencer_endpoints.py  test_media_endpoints.py  websocket.rs
tests/common/: mod.rs
tests/integration/: __init__.py  test_auth.py  test_character_creation_flow.py  test_character_generator_real.py  test_chat_endpoints.py  test_chat_endpoints_v2.py  test_chat_recent_messages.py  test_chat_recent_messages_v2.py  test_create_conversation_history.py  test_deleted_bot_persistence.py  test_health_endpoints.py  test_idempotency.py  test_image_generation.py  test_image_generation_real.py  test_influencer_endpoints.py  test_redis_real.py  (+16 more)
(+34 files in other folders)
