[package]
name = "yral-ai-chat"
version = "1.0.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Auth
jsonwebtoken = "9"

# AI (OpenAI-compatible clients)
async-openai = { version = "0.32", features = ["chat-completion"] }

# HTTP client (for AI providers, S3, etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Config
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }
regex = "1"

# S3 storage (aws-sdk)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.64", features = ["behavior-version-latest"] }

# Base64 (audio encoding for Gemini)
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrent map (WebSocket manager)
dashmap = "6"

# Async utils
futures = "0.3"
strum = { version = "0.27.2", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde_json = "1"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
