[package]
name = "yral-ai-chat"
version = "1.0.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Auth
jsonwebtoken = "9"

# HTTP client (for AI providers, S3, etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Config
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utils
futures = "0.3"
